--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -10,19 +10,20 @@ env:
 
 jobs:
   setup-build-publish-deploy:
-    name: Setup, Build, Publish, and Deploy
+    name: Setup, Build and Publish
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout
+    - name: Setup gcloud
       uses: actions/checkout@v2
 
     - uses: GoogleCloudPlatform/github-actions/setup-gcloud@0.1.3
       with:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
-        
-    - run: |-
+
+    - name: Configure docker
+      run: |-
         gcloud --quiet auth configure-docker
 
     - name: Build
