--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -22,8 +22,7 @@ jobs:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
 
-    - name: Configure docker
-      run: |-
+    - run: |-
         gcloud --quiet auth configure-docker
 
     - name: Build
