--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -22,7 +22,8 @@ jobs:
         service_account_key: ${{ secrets.GKE_SA_KEY }}
         project_id: ${{ secrets.GKE_PROJECT }}
 
-    - run: |-
+    - name: Configure docker
+      run: |-
         gcloud --quiet auth configure-docker
 
     - name: Build
