--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -35,8 +35,11 @@ jobs:
       with:
           java-version: 1.8
 
+    - name: Run integration tests
+      run: mvn -B clean verify package
+
     - name: Build with Maven
-      run: mvn -B clean package docker:build
+      run: mvn -B docker:build
 
     - name: Tag Image
       run: |-
