--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -38,8 +38,8 @@ jobs:
     - name: Run integration tests
       run: mvn -B clean verify package
 
-    - name: Build with Maven
-      run: mvn -B docker:build
+    - name: Build with docker image
+      run: docker build --no-cache -t gcr.io/$PROJECT_ID/$IMAGE .
 
     - name: Tag Image
       run: |-
