--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -36,14 +36,14 @@ jobs:
           java-version: 1.8
 
     - name: Run integration tests
-      run: mvn -B clean verify package
+      run: mvn -B clean verify
 
-    - name: Build with docker image
-      run: docker build --no-cache -t gcr.io/$PROJECT_ID/$IMAGE .
+    - name: Build docker image
+      run: mvn spring-boot:build-image
 
     - name: Tag Image
       run: |-
-        docker tag gcr.io/$PROJECT_ID/$IMAGE "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
+        docker tag $IMAGE "gcr.io/$PROJECT_ID/$IMAGE:$GITHUB_SHA"
 
     - name: Publish
       run: |-
