--- a/.github/workflows/cloudbuild.yaml
+++ b/.github/workflows/cloudbuild.yaml
@@ -39,7 +39,7 @@ jobs:
       run: mvn -B clean verify
 
     - name: Build docker image
-      run: mvn spring-boot:build-image
+      run: mvn compile jib:dockerBuild
 
     - name: Tag Image
       run: |-
